deploy/k8s/base/rabbitmq/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: self-intro-rabbitmq
spec:
  replicas: 1
  revisionHistoryLimit: 3
  selector:
    matchLabels:
      app.kubernetes.io/name: self-intro-rabbitmq
  template:
    metadata:
      labels:
        app.kubernetes.io/name: self-intro-rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: docker.io/library/rabbitmq:3.13-management-alpine
          ports:
            - name: amqp
              containerPort: 5672
            - name: http-mgmt
              containerPort: 15672
            - name: metrics
              containerPort: 15692
          volumeMounts:
            - name: rabbitmq-plugins
              mountPath: /etc/rabbitmq/enabled_plugins
              subPath: enabled_plugins
          resources:
            requests:
              cpu: 50m
              memory: 96Mi
            limits:
              cpu: 200m
              memory: 256Mi
      volumes:
        - name: rabbitmq-plugins
          configMap:
            name: rabbitmq-plugins
