deploy/k8s/base/rabbitmq/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: self-intro-rabbitmq
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: self-intro-rabbitmq
  ports:
    - name: amqp
      port: 5672
      targetPort: 5672
    - name: http-mgmt
      port: 15672
      targetPort: 15672
