deploy/k8s/base/rabbitmq/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: self-intro-rabbitmq-ingress
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: self-intro-rabbitmq
  policyTypes:
    - Ingress
  ingress:
    - from:
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: self-intro-backend
        - podSelector:
            matchLabels:
              app.kubernetes.io/name: self-intro-backend-worker
      ports:
        - protocol: TCP
          port: 5672
    - from:
        - podSelector:
            matchLabels:
              app: prometheus
      ports:
        - protocol: TCP
          port: 15692
